--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BootCamp Project",
   "main": "app.js",
   "scripts": {
-     "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "author": "Keyur",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "angular2-flash-messages": "^2.0.5",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "formidable": "^1.2.1",
     "ipware": "^1.0.0",
@@ -21,8 +22,8 @@
     "mongoose": "^5.0.15",
     "mongoose-timestamp": "^0.6.0",
     "multer": "^1.3.0",
+    "ngx-pagination": "^3.1.1",
     "node-localstorage": "^1.3.1",
-    "nodemon": "^1.17.3",
-	"ngx-pagination": "^3.1.1"
+    "nodemon": "^1.17.3"
   }
 }
